<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/medicineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_text_short"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textSize="@dimen/text_regular_3x"
            android:padding="@dimen/margin_medium_2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/margin_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_count"
                    android:padding="@dimen/margin_medium"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:suffixText="@string/tab"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTabCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="number"
                        android:padding="@dimen/margin_medium"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/margin_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days_to_take_medicine"
                    android:padding="@dimen/margin_medium"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDaysToTake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:padding="@dimen/margin_medium"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeatChipGroup"
            android:layout_marginHorizontal="@dimen/margin_medium"
            app:singleSelection="false"
            app:chipSpacingHorizontal="@dimen/margin_large"
            style="@style/Widget.MaterialComponents.Chip.Choice">

            <com.google.android.material.chip.Chip
                android:id="@+id/morningChip"
                android:text="@string/morning"
                app:chipStartPadding="@dimen/margin_large"
                app:chipEndPadding="@dimen/margin_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.App.Chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/noonChip"
                android:text="@string/noon"
                app:chipStartPadding="@dimen/margin_large"
                app:chipEndPadding="@dimen/margin_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.App.Chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/nightChip"
                android:text="@string/night"
                app:chipStartPadding="@dimen/margin_large"
                app:chipEndPadding="@dimen/margin_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.App.Chip"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/object_medicine"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/beforeOrAfterMealChipGroup"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/beforeMealChip"
                android:text="@string/before_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.App.Chip"
                android:layout_marginStart="@dimen/margin_medium"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/afterMealChip"
                android:text="@string/after_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.App.Chip"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="@dimen/margin_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_medicine"
            android:layout_gravity="center"
            style="@style/BlueMaterialButton_round8dp"
            android:layout_margin="@dimen/margin_medium_3"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>