<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margin_medium"
    app:cardElevation="8dp"
    android:layout_marginEnd="@dimen/margin_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium">

        <TextView
            android:id="@+id/tvConsultationRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/patientTypeTag"
            app:layout_constraintBottom_toBottomOf="@id/patientTypeTag"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/consultation_request"
            android:layout_margin="@dimen/margin_medium_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/patientTypeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_patient"
            android:padding="@dimen/margin_medium"
            app:backgroundTint="@color/yellow"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginVertical="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/patientTypeTag"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPatient"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_margin="@dimen/margin_medium_2"/>

        <TextView
            android:id="@+id/tvPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintStart_toEndOf="@id/ivPatient"
            app:layout_constraintTop_toTopOf="@id/ivPatient"/>

        <TextView
            android:id="@+id/tvPatientDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@id/tvPatientName"
            app:layout_constraintTop_toBottomOf="@id/tvPatientName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSchedule"
            app:layout_constraintTop_toBottomOf="@id/ivPatient"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:backgroundTint="@color/teal"
            android:text="@string/later"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/btnMessage"
            app:layout_constraintStart_toEndOf="@id/btnLater"
            app:layout_constraintTop_toTopOf="@id/btnLater"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:backgroundTint="@color/orange"
            android:text="@string/schedule"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSchedule"
            app:layout_constraintTop_toTopOf="@id/btnLater"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:backgroundTint="@color/blue"
            android:text="@string/accept"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>